Correcting author name

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,7 +4,7 @@ Trevor Bekolay
 John Blischak
 Andy Boughton
 Amy Boyle
-Abigail Cabunoc
+Abigail Cabunoc Mayes
 Gerard Capes
 Mike Croucher
 Remi Daigle
