Updating .mailmap and AUTHORS before release

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,37 +1,21 @@
-James Allen
-Piotr Banaszkiewicz
-Trevor Bekolay
 Jared Berghold
-John Blischak
-Andy Boughton
 Amy Boyle
-Abigail Cabunoc Mayes
 Gerard Capes
 Mike Croucher
 Remi Daigle
 James A. Desjardins
-Gabriel A. Devenyi
-Jonah Duckles
 Susan Duncan
-Rémi Emonet
-Michael Hansen
 Ian Hawke
-Mike Jackson
 Seb James
-W. Trevor King
 Isabell Kiral-Kornek
 Alex Kotliarskyi
-François Michonneau
-Bill Mills
 Jason K. Moore
 Fran Navarro
-Aaron O'Leary
 John Pearson
-Jon Pipitone
-Timothée Poisot
 Raniere Silva
 Ashwin Srinath
 Adam Thomas
 Carolyn Voter
-Evan P. Williamson
-Greg Wilson
+Erin Becker
+Kyler Brown
+Sarah Clayton
